Revert "fix(components): Fix form field inconsistent spacing when used under Form and InputGroup JOB-37646 (#762)"
This reverts commit 814803912c8a67ba02db2577ec857522833f3f01.

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -280,3 +280,7 @@
 .miniLabel:not(.small) .affixLabel {
   padding-top: calc(var(--field--padding-top) - 2px);
 }
+
+.description {
+  margin-top: var(--space-smaller);
+}
