--- a/packages/components/src/InputGroup/InputGroup.css
+++ b/packages/components/src/InputGroup/InputGroup.css
@@ -3,8 +3,8 @@
 }
 
 .horizontal {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+  display: flex;
+  align-items: flex-end;
 }
 
 .horizontal > *:not(:last-child) {
